# pico-pwm-controller

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build_esp32.sh  build_pico.sh  docker_build.sh  sdkconfig.defaults
.circleci/: config.yml
.github/workflows/: docker.yml
cmake/: esp32_sdk_import.cmake  platform_detect.cmake
docker/: Dockerfile  docker-compose-build-and-push-image.sh  docker-compose-compile.sh  docker-compose-compile.yml  docker-compose-image-build.yml
exec/: CMakeLists.txt  adc_helper.hh  base_types.hh  button_helper.hh  critical_section_helper.hh  fan_speed_helper.hh  fan_speed_manager.cc  fan_speed_manager.hh  frequency_counter.cc  frequency_counter.hh  lcd_helper.hh  logger.hh  pid.hh  pwm_controller.cc  pwm_controller_esp32.cc  pwm_controller_lite.cc  pwm_helper.hh  pwm_helper_esp32.cc  pwm_helper_pico.cc  rgb_led_helper.hh  system_clock.hh  temp_helper.hh
exec/test/: pid_simulator.py
main/: CMakeLists.txt  aw9523_helper.hh  base_types.hh  ble_spp_helper.hh  button_helper.hh  fan_speed_helper.hh  frequency_counter.hh  frequency_counter_pico.cc  i2c_helper.hh  logger.hh  pid.hh  pwm_controller_esp32.cc  pwm_controller_pico.cc  pwm_helper.hh  pwm_helper_esp32.cc  pwm_helper_pico.cc  system_clock.hh
main/esp32/: ble_gatt_utilitys.hh  ble_spp_helper_esp32.cc  frequency_counter_esp32.cc  i2c_helper_esp32.cc  pwm_controller_esp32.cc  pwm_helper_esp32.cc
main/pico/: frequency_counter_pico.cc  i2c_helper_pico.cc  pwm_controller_pico.cc  pwm_helper_pico.cc
main/test/: pid_simulator.py
